Version 0.9 (01.05.2014)
============================

	- New feature: Topic poll layout
	- New feature: Logo responsive
	- Update: Font-Awesome 4.1
	- Fixed Bug: Huge MCP fix
	- Fixed Bug: Search page fix
	- Fixed Bug: UCP fix 2
	- Fixed Bug: New user profile fix
	- Fixed Bug: Pagination fix


Version 0.8 (28.04.2014)
============================

	- New feature: New user profile layout
	- Fixed Bug: Huge UCP fix
	- Fixed Bug: HTML5 fix